setup required users

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,14 @@
-ELK_VERSION=7.16.0
-ELASTIC_USERNAME=elastic
-ELASTIC_PASSWORD=some_password
+ELK_VERSION=9.2.0
+
+# Credentials
+KIBANA_USERNAME=kibana_geexi
+KIBANA_PASSWORD=some_password_for_kibana
+LOGSTASH_USERNAME=logstash_geexi
+LOGSTASH_PASSWORD=some_password_for_logstash
+SUPERUSER_USERNAME=geexirooz
+SUPERUSER_PASSWORD=some_other_password
+
+# URLs
 KIBANA_URL=https://0.0.0.0:5601
 
 # Configuration Variables
@@ -12,7 +20,6 @@ METRICBEAT_HEAP=256m
 XPACK_ENCRYPTION_KEY=somesuperlongstringlikethisoneMQBbtsynu4bV2uxLy
 
 # Self signed TLS certificates
-CA_PASSWORD=some_password
 CA_DAYS=3650
 ELASTIC_DIR=/usr/share/elasticsearch
 LOGSTASH_DIR=/usr/share/logstash
