--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -13,7 +13,7 @@ elasticsearch.password: "${ELASTIC_PASSWORD}"
 monitoring.ui.container.elasticsearch.enabled: true
 
 # X-Pack Security
-xpack.security.enabled: true
+#xpack.security.enabled: true
 xpack.encryptedSavedObjects.encryptionKey: "${ENCRYPTION_KEY}"
 xpack.security.encryptionKey: "${ENCRYPTION_KEY}"
 xpack.reporting.encryptionKey: "${ENCRYPTION_KEY}"
@@ -26,11 +26,11 @@ server.ssl.key: "${CONFIG_DIR}/kibana.key"
 server.ssl.certificateAuthorities: [ "${CONFIG_DIR}/ca.crt" ]
 
 # fleet settings for Elastic-agent
-xpack.fleet.enabled: true
-xpack.fleet.agents.enabled: true
-xpack.fleet.agents.tlsCheckDisabled: true
-xpack.fleet.agents.kibana.host: "https://kibana:5601"
-xpack.fleet.agents.elasticsearch.host: "https://elasticsearch:9200"
-
-xpack.ingestManager.enabled: true
-xpack.ingestManager.fleet.enabled: true
+#xpack.fleet.enabled: true
+#xpack.fleet.agents.enabled: true
+#xpack.fleet.agents.tlsCheckDisabled: true
+#xpack.fleet.agents.kibana.host: "https://kibana:5601"
+#xpack.fleet.agents.elasticsearch.host: "https://elasticsearch:9200"
+#
+#xpack.ingestManager.enabled: true
+#xpack.ingestManager.fleet.enabled: true
