--- a/docker-compose.setup.yml
+++ b/docker-compose.setup.yml
@@ -13,6 +13,8 @@ services:
     environment: 
       KIBANA_USERNAME: ${KIBANA_USERNAME}
       KIBANA_PASSWORD: ${KIBANA_PASSWORD}
+      BEATS_USERNAME: ${BEATS_USERNAME}
+      BEATS_PASSWORD: ${BEATS_PASSWORD}
       SUPERUSER_USERNAME: ${SUPERUSER_USERNAME}
       SUPERUSER_PASSWORD: ${SUPERUSER_PASSWORD}
     networks: 
