--- a/.env-example
+++ b/.env-example
@@ -3,6 +3,8 @@ ELK_VERSION=9.2.0
 # Credentials
 KIBANA_USERNAME=kibana_geexi
 KIBANA_PASSWORD=some_password_for_kibana
+BEATS_USERNAME=beats_geexi
+BEATS_PASSWORD=some_password_for_beats
 SUPERUSER_USERNAME=geexirooz
 SUPERUSER_PASSWORD=some_other_password
 
@@ -11,12 +13,14 @@ KIBANA_URL=https://0.0.0.0:5601
 
 # Configuration Variables
 ELASTICSEARCH_HEAP=2g
+FILEBEAT_HEAP=256m
 XPACK_ENCRYPTION_KEY=somesuperlongstringlikethisoneMQBbtsynu4bV2uxLy
 
 # Self signed TLS certificates
 CA_DAYS=3650
 ELASTIC_DIR=/usr/share/elasticsearch
 KIBANA_DIR=/usr/share/kibana
+FILEBEAT_DIR=/usr/share/filebeat
 
 # Suricata Configuration
 SURICATA_VERSION=8.0.2
