--- a/setup/instances.yml
+++ b/setup/instances.yml
@@ -13,3 +13,10 @@ instances:
     ip:
       - "0.0.0.0"
       - "127.0.0.1"
+  - name: filebeat
+    dns:
+      - filebeat
+      - localhost
+    ip:
+      - "0.0.0.0"
+      - "127.0.0.1"
